ISSUE-65: Add user password * Added password field to user * Deleted status field from user * CreateUserDto with additional password field * Added security dependency * createUser with encoded password * csrf disabled * All tests and e2e working with new changes
